<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bdec.training.javaspark</groupId>
    <artifactId>java_spark_l2</artifactId>
    <version>1.0-SNAPSHOT</version>

<!--    <properties>-->
<!--        <maven.compiler.source>17</maven.compiler.source>-->
<!--        <maven.compiler.target>17</maven.compiler.target>-->
<!--    </properties>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
<!--                    <source>17</source>-->
<!--                    <target>17</target>-->
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <compilerArgs>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</compilerArgs>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
<!--        <dependency>-->
<!--            <groupId>org.apache.spark</groupId>-->
<!--            <artifactId>spark-core_2.13</artifactId>-->
<!--            <version>3.4.1</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.12</artifactId>
            <version>3.4.1</version>
<!--            <scope>provided</scope>-->
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


</project>